@@ -58,6 +58,10 @@
      [ssh_config.5]
      mention control socket fallback behaviour, reported by 
      tryponraj AT gmail.com
+   - djm@cvs.openbsd.org 2005/10/30 04:01:03
+     [ssh-keyscan.c]
+     make ssh-keygen discard junk from server before SSH- ident, spotted by
+     dave AT cirt.net; ok dtucker@
 
 20051102
  - (dtucker) [openbsd-compat/bsd-misc.c] Bug #1108: fix broken strdup().
@@ -3191,4 +3195,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3940 2005/11/05 04:11:48 djm Exp $
+$Id: ChangeLog,v 1.3941 2005/11/05 04:12:28 djm Exp $
